--- a/Assignment 1/Menu.html
+++ b/Assignment 1/Menu.html
@@ -8,7 +8,7 @@
 <body>
     <center>
 
-        <img src="Assets/Desi......jpg" alt="heading" style="width: 30%;">
+        <img src="assets/123.jpg" alt="heading" style="width: 30%;">
     </center>
     <hr>
     <center>
@@ -22,13 +22,13 @@
 <center>
 <h2>Our Menu</h2>
 <h3>Burgers</h3>
-<img src="Assets/burger.jpg" alt="" style="width: 170px;" height="150px">
-<img src="Assets/burger3.jpg" alt="" style="width: 170px;"height="150px">
-<img src="Assets/burger2.jpg" alt="" style="width: 170px;"height="150px">
+<img src="assets/burger.jpg" alt="" style="width: 170px;" height="150px">
+<img src="assets/burger3.jpg" alt="" style="width: 170px;"height="150px">
+<img src="assets/burger2.jpg" alt="" style="width: 170px;"height="150px">
 <h3>Pizzas</h3>
-<img src="Assets/pizaa1.jpg" alt="" style="width: 157px;" height="150px">
-<img src="Assets/pizza.jpg" alt="" style="width: 170px;"height="150px">
-<img src="Assets/pizza2.jpg" alt="" style="width: 170px;"height="150px">
+<img src="assets/pizaa1.jpg" alt="" style="width: 157px;" height="150px">
+<img src="assets/pizza.jpg" alt="" style="width: 170px;"height="150px">
+<img src="assets/pizza2.jpg" alt="" style="width: 170px;"height="150px">
 </center>
 <hr>
 <center>
