--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -8,7 +8,7 @@
 <body>
     <center>
 
-        <img src="Assets/Desi......jpg" alt="heading" style="width: 30%;">
+        <img src="assets/123.jpg" alt="heading" style="width: 30%;">
     </center>
     <hr>
     <center>
@@ -22,9 +22,9 @@
 <center>
     <h4>We serve delicious fast food items</h4>
 
-<img src="Assets/food1.jpg" alt="" style="width: 170px;" height="150px">
-<img src="Assets/food.jpg" alt="" style="width: 170px;"height="150px">
-<img src="Assets/food2.jpg" alt="" style="width: 170px;"height="150px">
+<img src="assets/food1.jpg" alt="" style="width: 170px;" height="150px">
+<img src="assets/food.jpg" alt="" style="width: 170px;"height="150px">
+<img src="assets/food2.jpg" alt="" style="width: 170px;"height="150px">
 
 
 </center>
