--- a/Assignment 1/Timmings.html
+++ b/Assignment 1/Timmings.html
@@ -8,7 +8,7 @@
 <body>
     <center>
 
-        <img src="Assets/Desi......jpg" alt="heading" style="width: 30%;">
+        <img src="assets/123.jpg" alt="heading" style="width: 30%;">
     </center>
     <hr>
     <center>
